<resources>
    <string name="app_name">clickhit</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="my_posts">My Posts</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help">Help and Support</string>
    <string name="additional">Additional Info</string>
    <string name="food">Food</string>
    <string name="sketch">Sketch</string>
    <string name="qoute">Quotes</string>
    <string name="comment">Add a comment…</string>
    <string name="navigation_drawer_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer close</string>
    <string name="activity">My Activities</string>
    <string name="my_menu">My Menu</string>
    <string name="my_library">My Library</string>
    <string name="edit_profile">Edit profile</string>
    <string name="send_feed">Send Feedback</string>
    <string name="hint">Write your reviews</string>
    <string name="warning">Please only write reviews about Clickhit app features</string>
    <string name="post">Post</string>
    <string name="food_post_title">Add New Dish</string>
    <string name="food_body">Cooking is at once child’s play and adult joy. And cooking done with care is an act of love.</string>
    <string name="sketch_post_title">Add New Sketch</string>
    <string name="sketch_body">Drawing is rather like playing chess: your mind races ahead of the moves that you eventually make.</string>
    <string name="quote_post_title">Add New Quote</string>
    <string name="quote_body">Start writing, no matter what. The water does not flow until the faucet is turned on.</string>
    <string name="subtitle_sketch_body">Showcase your sketching talent.</string>
    <string name="subtitle_quotes_body">Showcase your writing talent.</string>
    <string name="subtitle_food_body">Showcase your cooking talent.</string>
    <string name="share">Share</string>
    <string name="dish_name">Dish Name</string>
    <string name="recipe_story">Tell us your recipe story.</string>
    <string name="cooking_time">Cooking time</string>
    <string name="serves">Serve to</string>
    <string name="time">30 mins</string>
    <string name="people">4 people</string>
    <string name="add_ing">Add Ingredient.</string>
    <string name="ingredients">Ingredients</string>
    <string name="item">ITEM</string>
    <string name="procedure">Procedure</string>
    <string name="add_rec">Cooking procedure…</string>
    <string name="sketch_desc">Write Description…</string>
    <string name="sketching_time">Time taken</string>
    <string name="colors">Colors</string>
    <string name="next">Next</string>
    <string name="quote_hint">Write your heart out…</string>
    <string name="photos">Photos</string>
    <string name="space">"  "</string>
    <string name="text_style">Font Style</string>
    <string name="pallet">Pallet</string>
    <string name="search_hint">Search…</string>
    <string name="password">Password</string>
    <string name="invite">Invite Friends</string>
    <string name="about">About</string>
    <string name="logout">Log Out</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">Confirm New Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="already_signup">Already Sign Up? login.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_account">Don\'t have an account?sign up</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="dob">Date of Birth</string>
    <string name="add_pic">Add a profile picture  for the people to recognize you.</string>
    <string name="camera">Camera</string>
    <string name="choose">Select App</string>
    <string name="gallery">Gallery</string>
</resources>