<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/activity"
            android:icon="@drawable/ic_baseline_whatshot_24"
            android:title="@string/activity" />
        <item
            android:id="@+id/library"
            android:icon="@drawable/ic_baseline_photo_library_24"
            android:title="@string/my_library" />
        <item
            android:id="@+id/menu"
            android:icon="@drawable/ic_baseline_restaurant_black_24"
            android:title="@string/my_menu" />

    </group>

    <item android:title="@string/additional">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/settings" />
            <item
                android:id="@+id/privacy_policy"
                android:icon="@drawable/ic_baseline_policy_24"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/help"
                android:icon="@drawable/ic_baseline_help_24"
                android:title="@string/help" />
        </menu>
    </item>


</menu>