<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/post"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/post"
        app:showAsAction="always" />

    <item
        android:id="@+id/fav"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/favourite"
        app:showAsAction="always" />

    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/notifications"
        app:showAsAction="always" />


</menu>