<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".Auth.SignUp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign-up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/colorPrimary"
        android:padding="10dp"
        app:errorEnabled="true"
        android:layout_marginTop="30dp"
        app:boxStrokeColor="@color/colorAccent"
        app:startIconDrawable="@drawable/ic_person_black_18dp"
        app:hintTextColor="@color/colorAccent"
        android:hint="@string/username">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:textCursorDrawable="@null"
            android:textColor="@color/colorAccent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/colorPrimary"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        app:boxStrokeColor="@color/colorAccent"
        app:startIconDrawable="@drawable/ic_lock_black_18dp"
        app:hintTextColor="@color/colorAccent"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/colorPrimary"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        app:boxStrokeColor="@color/colorAccent"
        app:startIconDrawable="@drawable/ic_lock_black_18dp"
        app:hintTextColor="@color/colorAccent"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        android:hint="@string/confirm_password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:text="@string/already_signup"/>

    <Button
        android:id="@+id/next"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:text="@string/next"
        android:textColor="@color/colorAccent"
        app:rippleColor="@color/colorAccentLight"
        app:strokeColor="@color/colorAccent" />

</LinearLayout>
</androidx.core.widget.NestedScrollView>